--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jwchat": "^0.2.48",
     "transform-runtime": "0.0.0",
     "vue": "^2.5.17",
+    "vue-beautiful-chat": "^2.5.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -24,8 +25,8 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "compression-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.5.4",
+    "compression-webpack-plugin": "^6.1.1",
+    "copy-webpack-plugin": "^6.3.2",
     "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
     "eslint-loader": "^2.1.1",
